# fraud-inference-api

./: .env.dev  Dockerfile  README.md  constraints-serve.txt  docker-compose.dev.yml  openapi.json  pyproject.toml
.github/workflows/: ci.yml  release-deploy.yml
app/: main.py
app/api/: health.py  routers.py
app/core/: config.py  logging.py  metrics.py  security.py
app/middleware/: request_id.py
app/models/: loader.py  registry.py  store.py
app/schemas/: predict.py
app/services/: infer.py  validator.py
deploy/: stack.yml
scripts/: check_constraints.py
tests/: conftest.py
tests/unit/: test_loader_signature.py  test_loader_xgboost.py  test_registry_model_version.py  test_validator.py
