[tool.poetry]
name = "fraud-inference-api"
version = "0.1.0"
description = "A production-ready FastAPI inference service for MLflow models."
authors = ["Jules <agent@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~3.11"
mlflow = "2.10.2"
scikit-learn = "1.4.*"
lightgbm = "4.3.*"
xgboost = "2.0.3"
pandas = "2.2.*"
numpy = "1.26.*"
fastapi = "0.110.*"
uvicorn = {extras = ["standard"], version = "0.29.*"}
pydantic = "2.6.*"
prometheus-client = "0.20.*"
structlog = "24.1.*"
pydantic-settings = "2.2.1"
pyyaml = "^6.0.2"
setuptools = "^80.9.0"
boto3 = "^1.34.119"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"
black = "^24.4.2"
mypy = "^1.10.0"
requests = "^2.31.0"
pytest-env = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
env = [
    "MLFLOW_TRACKING_URI=http://fake-mlflow-uri:5000"
]
